# agri

./: .gitignore  README.md  strip_comments.py
agrisense/: README.md  pubspec.yaml
agrisense/android/app/src/main/: AndroidManifest.xml
agrisense/ios/Runner/: Info.plist
agrisense/test/: widget_test.dart
backend/: main.py  pyproject.toml  requirements.txt  test_db.py
backend/api/: database.py  db_models.py  models.py  routes.py
backend/rag/: market_service.py  retriever.py  weather_service.py
backend/scripts/: init_db.py  migrate_photo_url.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: LocationBanner.jsx  WeatherWarningCard.jsx
frontend/src/lib/: useLocationData.js
frontend/src/pages/: DiseasePage.jsx  DiseaseResultPage.jsx  HomePage.css  HomePage.jsx  MarketPage.jsx  ProfilePage.jsx  SchemePage.jsx  TreatmentPage.css  TreatmentPage.jsx  WeatherPage.jsx  YieldPage.jsx
